<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023-2024 wintmain
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/device_info_title">
    <!-- for device model version -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="device_meta"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/model_number" />
    <!-- for hardware version -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="hardware_version"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/hardware_version" />
    <!-- for meid number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="meid_esn_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/meid_esn" />
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="telephone_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/my_number" />
    <!-- for baseband version -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="baseband_version"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/baseband_version" />
    <!-- for PRL version -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="prl_version"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/prl_version" />
    <!-- for firmware version(android version) -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="android_version"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/android_version" />
    <!-- get sw version from prop or metainfo -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="software_version"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/software_version" />
    <!-- for imsi of card -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="imsi"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/imsi" />
    <!-- for UIM ID of C card -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="uim_id"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/uim_id" />
    <!-- for SID number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="sid_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/sid" />
    <!-- for NID number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="nid_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/nid" />
    <!-- for MSPL number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="mspl_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/mspl" />
    <!-- for MLPL number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="mlpl_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/mlpl" />
    <!-- for PRL number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="eprl_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/eprl" />
    <!-- for ICCID number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="iccid_number"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/iccid" />
    <!-- for IMEI 1 number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="imei_number_1"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/imei1" />
    <!-- for IMEI 2 number -->
    <Preference
        style="?android:attr/preferenceInformationStyle"
        android:key="imei_number_2"
        android:persistent="false"
        android:summary="@string/device_info_unknown"
        android:title="@string/imei2" />
</PreferenceScreen>
