<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023-2024 wintmain
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/sim_debug_title">
    <ListPreference
        android:dialogTitle="@string/sim"
        android:entries="@array/sim_entries"
        android:entryValues="@array/sim_values"
        android:key="sim"
        android:persistent="false"
        android:title="@string/sim" />
    <EditTextPreference
        android:dialogTitle="@string/mcc_mnc"
        android:inputType="number"
        android:key="mcc_mnc"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/mcc_mnc" />
    <EditTextPreference
        android:dialogTitle="@string/sim_imsi"
        android:inputType="number"
        android:key="sim_imsi"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_imsi" />
    <EditTextPreference
        android:dialogTitle="@string/sim_iccid"
        android:inputType="number"
        android:key="sim_iccid"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_iccid" />
    <EditTextPreference
        android:dialogTitle="@string/sim_gid1"
        android:inputType="text"
        android:key="sim_gid1"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_gid1" />
    <EditTextPreference
        android:dialogTitle="@string/sim_gid2"
        android:inputType="text"
        android:key="sim_gid2"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_gid2" />
    <EditTextPreference
        android:dialogTitle="@string/sim_pnn"
        android:inputType="text"
        android:key="sim_pnn"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_pnn" />
    <EditTextPreference
        android:dialogTitle="@string/sim_spn"
        android:inputType="text"
        android:key="sim_spn"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_spn" />
    <EditTextPreference
        android:dialogTitle="@string/sim_apn"
        android:inputType="text"
        android:key="sim_apn"
        android:persistent="false"
        android:singleLine="true"
        android:title="@string/sim_apn" />

</PreferenceScreen>
