<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023-2024 wintmain
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--For Device info-->
    <PreferenceCategory
        android:textStyle="bold"
        android:title="@string/device_info_category_title">
        <PreferenceScreen
            android:key="device_info"
            android:title="@string/device_info_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.deviceinfo.DeviceInfoActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
    </PreferenceCategory>

    <!--For CarrierConfig-->
    <PreferenceCategory
        android:textStyle="bold"
        android:title="@string/config_title">
        <PreferenceScreen
            android:key="@string/config_confirm"
            android:title="@string/config_confirm">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.debug.CarrierConfigDebugActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
    </PreferenceCategory>

    <!--For APN-->
    <PreferenceCategory
        android:textStyle="bold"
        android:title="@string/apn_query_title">
        <PreferenceScreen
            android:key="apn_query"
            android:title="@string/apn_query_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.debug.ApnQueryActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
    </PreferenceCategory>

    <!--For Connectivity & Network-->
    <PreferenceCategory
        android:textStyle="bold"
        android:title="@string/connectivity_category_title">
        <PreferenceScreen
            android:key="connectivity_debug"
            android:title="@string/connectivity_debug_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.debug.ConnectivityDebugActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="network_debug"
            android:title="@string/network_debug_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.debug.NetworkDebugActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
    </PreferenceCategory>

    <!--For SIM-->
    <PreferenceCategory
        android:textStyle="bold"
        android:title="@string/sim_category_title">
        <PreferenceScreen
            android:key="sim_debug"
            android:title="@string/sim_debug_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.wintmain.xtele.debug.SimDebugActivity"
                android:targetPackage="com.wintmain.xtele" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
