<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_request"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/connectivityCapability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/request_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/release_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_button"
        android:textSize="14sp" />
</LinearLayout>
