<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023-2024 wintmain
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/mcc_mnc"
        android:dialogTitle="@string/mcc_mnc"
        android:key="mcc_mnc"
        android:singleLine="true"
        android:inputType="number"
        android:persistent="false"/>

    <ListPreference
        android:title="@string/apn_mvno_type"
        android:dialogTitle="@string/apn_mvno_type"
        android:key="mvno_type"
        android:entries="@array/apn_mvno_type_entries"
        android:entryValues="@array/apn_mvno_type_values"
        android:persistent="false"/>

    <EditTextPreference
        android:title="@string/apn_mvno_value"
        android:dialogTitle="@string/apn_mvno_value"
        android:key="mvno_value"
        android:singleLine="true"
        android:inputType="text"
        android:persistent="false"/>

    <EditTextPreference
        android:title="@string/apn_carrier_id"
        android:dialogTitle="@string/apn_carrier_id"
        android:key="carrier_id"
        android:singleLine="true"
        android:inputType="number"
        android:persistent="false" />

</PreferenceScreen>
